# brancato

./: LICENSE  README.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: dependabot.yml  main.yml  pr.yml
src/: App.css  App.tsx  Config.tsx  Omnibar.tsx  theme.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_config.rs  config.rs  main.rs  user_config.rs  windows.rs  workflows.rs
src/components/: Autocomplete.jsx  Filepath.tsx  NewAutocomplete.jsx  Shortcut.tsx
src/components/Omnibar/: Action.tsx  Omnibar.tsx  math-source.tsx  settings-source.tsx  websearch-source.tsx  workflow-source.tsx
src/components/core/: Tabs.tsx  button.tsx  dialog.tsx  input.tsx  popover.tsx
src/forms/: workflow-action.tsx  workflow-array.tsx  workflow-settings.tsx
src/hooks/: use-warning-on-unload.ts
