[package]
name = "brancato"
version = "0.8.1"
description = "A tool for stage-managing your life"
authors = ["Ryan Killeen"]
license = ""
repository = ""
default-run = "brancato"
edition = "2021"
rust-version = "1.57"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.4", features = ["api-all", "system-tray"] }
execute = "0.2.9"
open = "2.0.2"
directories = "4.0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
